--- a/Repositorio.EF6/packages.config
+++ b/Repositorio.EF6/packages.config
@@ -4,8 +4,9 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="LinqKit" version="1.1.2" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net45" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.BinFix" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.NoInstall" version="1.0.3.2" targetFramework="net45" />
-  <package id="Microsoft.Net.Compilers" version="2.0.1" targetFramework="net45" developmentDependency="true" />
+  <package id="Microsoft.Net.Compilers" version="2.6.0" targetFramework="net48" developmentDependency="true" />
   <package id="Microsoft.Net.Compilers.netcore" version="1.3.2" targetFramework="net45" />
 </packages>
