--- a/Repositorio/packages.config
+++ b/Repositorio/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net45" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.BinFix" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.NoInstall" version="1.0.3.2" targetFramework="net45" />
-  <package id="Microsoft.Net.Compilers" version="2.0.1" targetFramework="net45" developmentDependency="false" />
+  <package id="Microsoft.Net.Compilers" version="2.6.0" targetFramework="net48" developmentDependency="true" />
   <package id="Microsoft.Net.Compilers.netcore" version="1.3.2" targetFramework="net45" />
 </packages>
