--- a/CsWeb/CsWeb.csproj
+++ b/CsWeb/CsWeb.csproj
@@ -15,7 +15,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CsWeb</RootNamespace>
     <AssemblyName>CsWeb</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
@@ -124,6 +124,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
@@ -131,6 +132,7 @@
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Abstractions" />
@@ -174,6 +176,7 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.2\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="WebActivatorEx, Version=2.0.0.0, Culture=neutral, PublicKeyToken=7b26dc2a43f6a0d4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\WebActivatorEx.2.0.6\lib\net40\WebActivatorEx.dll</HintPath>
@@ -253,6 +256,7 @@
     <Compile Include="Infrastructure\Notification\ControllerExtensions.cs" />
     <Compile Include="Infrastructure\Notification\HtmlHelperExtensions.cs" />
     <Compile Include="Infrastructure\Notification\MessageType.cs" />
+    <Compile Include="Models\Jresult.cs" />
     <Compile Include="Models\NivelExamenViewModel.cs" />
     <Compile Include="Models\FileNombreViewModel.cs" />
     <Compile Include="Models\CambiarContrasenaViewModel.cs" />
@@ -721,6 +725,8 @@
     <Content Include="Content\jsLogin\slider.js" />
     <Content Include="Content\rc.css" />
     <Content Include="Content\img\Riav\menuGris.png" />
+    <Content Include="css\mvc-grid\mvc-grid.css" />
+    <Content Include="js\mvc-grid\mvc-grid.js" />
     <Content Include="Scripts\Chart.min.js" />
     <Content Include="Scripts\jquery-3.5.1.js" />
     <Content Include="Scripts\jquery-3.5.1.min.js" />
@@ -1012,6 +1018,7 @@
     <Content Include="Content\fonts\readme" />
     <Content Include="Content\fonts\WorkSans-Regular.ttf" />
     <Content Include="Content\Doc\Preguntas.pdf" />
+    <Content Include="css\mvc-grid\fonts\grid-glyphs.woff" />
     <None Include="job_scheduling_data_2_0.xsd">
       <SubType>Designer</SubType>
     </None>
@@ -1134,6 +1141,8 @@
     <Content Include="Views\Paginas\DatosGeom.cshtml" />
     <Content Include="Views\Paginas\Proyectosgeo.cshtml" />
     <Content Include="Views\Shared\_LayoutHomeIndex.cshtml" />
+    <Content Include="Views\Shared\MvcGrid\_Pager.cshtml" />
+    <Content Include="Views\Shared\MvcGrid\_Grid.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
