--- a/CsWeb/packages.config
+++ b/CsWeb/packages.config
@@ -48,6 +48,7 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="MvcReportViewer" version="0.8.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
+  <package id="NonFactors.Grid.Mvc6" version="7.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Quartz" version="2.4.1" targetFramework="net45" />
   <package id="recaptcha" version="1.0.5.0" targetFramework="net45" />
