fix js y validacione en el web.config

--- a/CsWeb/Web.config
+++ b/CsWeb/Web.config
@@ -21,7 +21,9 @@
 
 -->
   </configSections>
-  <connectionStrings>
+
+
+	<connectionStrings>
     <add name="CsWebContext" connectionString="Data Source=(local);Initial Catalog=controlsocialdb;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
@@ -60,7 +62,9 @@
         <httpRuntime targetFramework="4.5.2" />
       </system.Web>
   -->
+	
   <system.web>
+	  <httpRuntime enableVersionHeader="false"/>
     <sessionState mode="InProc" cookieless="false" timeout="45" />
     <authentication mode="Forms">
       <forms loginUrl="~/Cuenta/IniciarSesion" name="ControlSocial" protection="All" cookieless="UseCookies" timeout="48000" />
@@ -75,6 +79,11 @@
     <pages validateRequest="true" clientIDMode="Predictable" />
   </system.web>
   <system.webServer>
+	  <httpProtocol>
+		  <customHeaders>
+			  <clear />
+		  </customHeaders>
+	  </httpProtocol>
     <staticContent>
       <remove fileExtension=".svg" />
       <remove fileExtension=".eot" />
