--- a/CsWeb/packages.config
+++ b/CsWeb/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.3.5" targetFramework="net45" />
   <package id="BouncyCastle" version="1.8.6.1" targetFramework="net452" />
+  <package id="CaptchaMvc.Mvc5" version="1.5.0" targetFramework="net452" />
   <package id="Common.Logging" version="3.3.1" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.2" targetFramework="net45" />
